--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@ html {
 }
 
 body {
-  font-family: 'Nunito', sans-serif;
+  font-family: Helvetica;
   font-weight: 400;
   height: 100vh;
   color: #333;
-  background-image: linear-gradient(to top left, #753682 0%, #bf2e34 100%);
+  background-image: linear-gradient(to top left, #753682 0%, #dbc7df 50%, #bf2e34 100%);
   display: flex;
   align-items: center;
   justify-content: center;
